# python-project-49

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime_launcher.py  brain_progression_launcher.py
test/: test.py
